Refactor async and exception
