# src/server/api/index.ts
@@ -1,29 +1,28 @@
-import * as express from "express";
 import server from "..";
 import logger from "../../service/logger";
 import sessionService from "../../service/sessionService";
+import Router from "../Router";
+import HttpUnauthorizedError from "../../error/HttpUnauthorizedError";
 
-class Api {
+class Api extends Router {
     private _logger = logger("Api");
-    private _router: express.Router;
 
     constructor() {
-        this._router = express.Router();
+        super();
 
-        this._router.use((req, res, next) => {
+        this.router.use((req, res, next) => {
             const { authorization } = req.headers;
 
             if (!authorization) {
                 this._logger.warn("Connection attempt without authorization");
-                res.statusMessage = "No authorization";
-                return res.status(401).end();
+                throw new HttpUnauthorizedError("No authorization");
             }
 
-            const bearerPattern = /Bearer (.*)/.exec(authorization);
+            const bearerPattern = /^Bearer (.*)$/.exec(authorization);
 
             if (!bearerPattern) {
                 this._logger.warn("Attempt to connect with bad bearer");
-                res.statusMessage = "Bad bearer format";
+                res.statusMessage = "Bad bearer";
                 return res.status(403).end();
             }
 
@@ -32,23 +31,19 @@ class Api {
             sessionService.loadSession(bearer).then(() => {
                 next();
             }).catch(err => {
-                this._logger.warn("The bearer does not exist.");
+                this._logger.warn("The bearer does not exist");
                 res.statusMessage = "Bad bearer";
                 return res.status(403).end();
             });
         });
 
-        this._router.get("/ping", (req, res) => {
+        this.router.get("/ping", (req, res) => {
             res.json({ping: "pong"});
         });
     }
 
-    public get router() {
-        return this._router;
-    }
-
     public load() {
-        server.addRouter("/api", this._router);
+        server.addRouter("/api", this.router);
     }
 }
 
